bug: Remove vertical scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html,
 body {
   font-family: Arial, sans-serif;
   height: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
